cmake_minimum_required(VERSION 3.10)
set(PROJECT_BINARY "factory")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
add_executable("${PROJECT_BINARY}" factory.cpp)
add_test(NAME "${PROJECT_BINARY}" COMMAND "${PROJECT_BINARY}")

set(PROJECT_BINARY "hire_and_fire")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
add_executable("${PROJECT_BINARY}" hire_and_fire.cpp)
add_test(NAME "${PROJECT_BINARY}" COMMAND "${PROJECT_BINARY}")

set(PROJECT_BINARY "callback")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
add_executable("${PROJECT_BINARY}" callback.cpp)
add_test(NAME "${PROJECT_BINARY}" COMMAND "${PROJECT_BINARY}")